fixed scrollbar and some format

--- a/style/css/base.css
+++ b/style/css/base.css
@@ -34,6 +34,7 @@ nav {
 
 ::-webkit-scrollbar {
     width: 1.5vw;
+    min-width: 20px;
 }
 
  ::-webkit-scrollbar-track {
