--- a/style/css/proy_index.css
+++ b/style/css/proy_index.css
@@ -1,27 +1,29 @@
-.moon{
-    position:absolute;
-    top:1vw;
-    right:40.7%;
-    width:20vw;
-    height:20vw;
-    border-radius:50%;
+.moon {
+    position: absolute;
+    top: 1vw;
+    right: 40.7%;
+    width: 20vw;
+    height: 20vw;
+    border-radius: 50%;
     background: #CCC;
-    box-shadow:0px 0px 600px #FFFF8C,0px 0px 800px #FFFF8C;;
-    z-index:-1;
-    animation: moonAnimation 2s infinite,mover2 100s infinite,eclipse2 6s forwards;
-    animation-delay:2s;
-     opacity: 0.4;
+    box-shadow: 0px 0px 600px #FFFF8C, 0px 0px 800px #FFFF8C;
+    ;
+    z-index: -1;
+    animation: moonAnimation 2s infinite, mover2 100s infinite, eclipse2 6s forwards;
+    animation-delay: 2s;
+    opacity: 0.4;
 }
 
-.centrar{
+.centrar {
     animation: centrar 8s;
     position: relative;
 }
-#primer{
-    height:22vw;
+
+#primer {
+    height: 22vw;
     margin-top: 10vw;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0.7) 50%, rgba(9,9,121,0) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0) 0%, rgba(0, 0, 0, 0.7) 50%, rgba(9, 9, 121, 0) 100%);
     color: white;
     font-family: 'loveloblack';
     border-top: 1px white solid;
@@ -29,68 +31,77 @@
     padding: 5%;
 }
 
-[name="formato1"]{
+[name="formato1"] {
     margin-top: 5vw;
     padding: 1%;
-    background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(9,9,121,0) 100%);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(9, 9, 121, 0) 100%);
     font-family: 'geosanslightregular';
     color: white;
 }
 
-[name="formato2"]{
+[name="formato2"] {
     margin-top: 5vw;
     padding: 1%;
-    background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(0,0,0,0.5) 50%, rgba(9,9,121,0) 100%);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(9, 9, 121, 0) 100%);
     font-family: 'geosanslightregular';
     color: white;
 }
 
-.imagen{
+.imagen {
     width: 30%;
 }
-[name="capsula"]{
+
+[name="capsula"] {
     border-radius: 45%;
     background-color: white;
     color: black;
-    width:fit-content;
+    width: fit-content;
     margin-right: 2%;
     padding: 2%;
     font-family: 'geosanslightregular';
 }
 
-.titulo{
+.titulo {
     font-size: 3vw;
     font-family: 'cinzel_decorativebold';
 }
 
-.resumen{
+.resumen {
     font-size: 2.5vw;
     padding: 4%;
 }
 
+
 /*--------------SCROLLBAR----------------*/
+
 ::-webkit-scrollbar {
     width: 1.5vw;
-  }
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-  ::-webkit-scrollbar-thumb {
-    background: #666; 
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: #444; 
-  }
+    min-width: 20px;
+}
+
+ ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+ ::-webkit-scrollbar-thumb {
+    background: #666;
+}
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #444;
+}
+
 
 /*--------------ANIMACIONES--------------*/
 
-@keyframes mover2{ 
-    0% { 
+@keyframes mover2 {
+    0% {
         transform: translateY(0px);
-    } 
-    50% { 
-                transform: translateY(320%);
-} 
+    }
+    50% {
+        transform: translateY(320%);
+    }
     100% {
-                transform: translateY(0px);
-} }
+        transform: translateY(0px);
+    }
+}
